# agimus-demos

agimus_demo_02_simple_pd_plus_tiago_pro/: README.md
agimus_demo_02_simple_pd_plus_tiago_pro/launch/: bringup.launch.py
agimus_demo_04_aruco_corners/: CMakeLists.txt  README.md  package.xml  setup.cfg
agimus_demo_04_aruco_corners/agimus_demo_04_aruco_corners/: aruco_corner_publisher.py
agimus_demo_04_aruco_corners/config/: agimus_controller_params.yaml  ocp_definition_file.yaml  trajectory_weights_params.yaml
agimus_demo_04_aruco_corners/launch/: bringup.launch.py  bringup_simu.launch.py
agimus_demo_04_aruco_corners/models/aruco_marker_0/: model.config  model.sdf
agimus_demo_04_aruco_corners/scripts/: generate_aruco_texture.py
agimus_demo_06_tiago_pro_pick_and_place/: CMakeLists.txt  README.md  package.xml  setup.cfg
agimus_demo_06_tiago_pro_pick_and_place/agimus_demo_06_tiago_pro_pick_and_place/: base_cmd_bridge.py
agimus_demo_06_tiago_pro_pick_and_place/config/: agimus_controller_params.yaml  hpp_orchestrator_params.yaml  ocp_definition_file.yaml
agimus_demo_06_tiago_pro_pick_and_place/hpp/: orchestrator.py  orchestrator_node.py
agimus_demo_06_tiago_pro_pick_and_place/launch/: bringup_simu.launch.py
agimus_demo_06_tiago_pro_pick_and_place/urdf/: box.urdf
agimus_demo_07_tiago_pro_deburring/: README.md
agimus_demo_07_tiago_pro_deburring/config/: hpp_orchestrator_params.yaml
agimus_demo_07_tiago_pro_deburring/hpp/: orchestrator.py
agimus_demo_07_tiago_pro_deburring/launch/: bringup_simu.launch.py
agimus_demo_tiago_pro_planar_base/: CMakeLists.txt  package.xml  setup.cfg
agimus_demo_tiago_pro_planar_base/agimus_demo_tiago_pro_planar_base/: base_cmd_bridge.py  fixed_goal_publisher.py
agimus_demo_tiago_pro_planar_base/config/: agimus_controller_params.yaml  ocp_definition_file.yaml  trajectory_weights_params.yaml
agimus_demo_tiago_pro_planar_base/launch/: bringup_simu.launch.py
agimus_demos/: package.xml
agimus_demos_common/: package.xml
agimus_demos_common/scripts/: save_urdf.py
